<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="receiverItem"
            type="com.szollosi.firebasedemo.data.ReceiverItem" />
    </data>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/message_id_label"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/message_id_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{receiverItem.id}"
                app:layout_constraintStart_toEndOf="@+id/message_id_label"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="123" />

            <TextView
                android:id="@+id/message_sent_date_label"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message_id_label" />

            <TextView
                android:id="@+id/message_send_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{receiverItem.sent}"
                app:layout_constraintStart_toEndOf="@+id/message_sent_date_label"
                app:layout_constraintTop_toBottomOf="@+id/message_id_label"
                tools:text="3:45:16 2018/15/56" />

            <TextView
                android:id="@+id/message_content_label"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message_sent_date_label" />

            <TextView
                android:id="@+id/message_content_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@{receiverItem.message}"
                app:layout_constraintStart_toEndOf="@+id/message_content_label"
                app:layout_constraintTop_toBottomOf="@+id/message_sent_date_label"
                tools:text="fjdsfgjsdljgsdlgjsd" />

            <TextView
                android:id="@+id/message_received_label"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_received"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message_content_value" />

            <TextView
                android:id="@+id/message_received_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{receiverItem.received}"
                app:layout_constraintStart_toEndOf="@+id/message_received_label"
                app:layout_constraintTop_toBottomOf="@+id/message_content_value"
                tools:text="3:45:18 2018/15/56" />

            <TextView
                android:id="@+id/message_date_diff_label"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_diff"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message_received_label" />

            <TextView
                android:id="@+id/message_date_diff_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{receiverItem.difference}"
                app:layout_constraintStart_toEndOf="@+id/message_date_diff_label"
                app:layout_constraintTop_toBottomOf="@+id/message_received_label"
                tools:text="2" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</layout>